tests/snapshots/web__list_traffics.snap
---
source: tests/web.rs
expression: output
---
/traffics

[
  {
    "id": 1,
    "method": "GET",
    "uri": "http://localhost:port/hello",
    "status": 200
  },
  {
    "id": 2,
    "method": "GET",
    "uri": "http://localhost:port/hello/gzip",
    "status": 200
  },
  {
    "id": 3,
    "method": "POST",
    "uri": "http://localhost:port/echo",
    "status": 200
  }
]

/traffics?markdown


# GET http://localhost:port/hello 200

REQUEST HEADERS
```
accept: */*
host: localhost:port
```

RESPONSE HEADERS
```
content-length: 13
date: <DATETIME>
```

RESPONSE BODY
```
Hello, World!
```


# GET http://localhost:port/hello/gzip 200

REQUEST HEADERS
```
accept: */*
host: localhost:port
```

RESPONSE HEADERS
```
content-encoding: gzip
transfer-encoding: chunked
date: <DATETIME>
```

RESPONSE BODY
```
Hello, World!
```


# POST http://localhost:port/echo 200

REQUEST HEADERS
```
content-type: text/plain
accept: */*
host: localhost:port
content-length: 13
```

REQUEST BODY
```plain
Hello, World!
```

RESPONSE HEADERS
```
content-type: text/plain
content-length: 13
date: <DATETIME>
```

RESPONSE BODY
```plain
Hello, World!
```

/traffics?har

{
  "log": {
    "version": "1.2",
    "creator": {
      "name": "proxyfor",
      "version": "0.2.0",
      "comment": ""
    },
    "pages": [],
    "entries": [
      {
        "startedDateTime": "<DATETIME>",
        "time": -1,
        "request": {
          "method": "GET",
          "url": "http://localhost:port/hello",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "accept",
              "value": "*/*"
            },
            {
              "name": "host",
              "value": "localhost:port"
            }
          ],
          "queryString": [],
          "postData": {
            "mimeType": "",
            "text": ""
          },
          "headersSize": -1,
          "bodySize": -1
        },
        "response": {
          "status": 200,
          "statusText": "",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "content-length",
              "value": "13"
            },
            {
              "name": "date",
              "value": "<DATETIME>"
            }
          ],
          "content": {
            "mimeType": "",
            "text": "Hello, World!",
            "size": -1
          },
          "redirectURL": "",
          "headersSize": -1,
          "bodySize": -1
        },
        "cache": {},
        "timings": {
          "connect": -1,
          "ssl": -1,
          "send": -1,
          "receive": -1,
          "wait": -1
        }
      },
      {
        "startedDateTime": "<DATETIME>",
        "time": -1,
        "request": {
          "method": "GET",
          "url": "http://localhost:port/hello/gzip",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "accept",
              "value": "*/*"
            },
            {
              "name": "host",
              "value": "localhost:port"
            }
          ],
          "queryString": [],
          "postData": {
            "mimeType": "",
            "text": ""
          },
          "headersSize": -1,
          "bodySize": -1
        },
        "response": {
          "status": 200,
          "statusText": "",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "content-encoding",
              "value": "gzip"
            },
            {
              "name": "transfer-encoding",
              "value": "chunked"
            },
            {
              "name": "date",
              "value": "<DATETIME>"
            }
          ],
          "content": {
            "mimeType": "",
            "text": "Hello, World!",
            "size": -1
          },
          "redirectURL": "",
          "headersSize": -1,
          "bodySize": -1
        },
        "cache": {},
        "timings": {
          "connect": -1,
          "ssl": -1,
          "send": -1,
          "receive": -1,
          "wait": -1
        }
      },
      {
        "startedDateTime": "<DATETIME>",
        "time": -1,
        "request": {
          "method": "POST",
          "url": "http://localhost:port/echo",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "content-type",
              "value": "text/plain"
            },
            {
              "name": "accept",
              "value": "*/*"
            },
            {
              "name": "host",
              "value": "localhost:port"
            },
            {
              "name": "content-length",
              "value": "13"
            }
          ],
          "queryString": [],
          "postData": {
            "mimeType": "text/plain",
            "text": "Hello, World!"
          },
          "headersSize": -1,
          "bodySize": -1
        },
        "response": {
          "status": 200,
          "statusText": "",
          "httpVersion": "HTTP/1.1",
          "cookies": [],
          "headers": [
            {
              "name": "content-type",
              "value": "text/plain"
            },
            {
              "name": "content-length",
              "value": "13"
            },
            {
              "name": "date",
              "value": "<DATETIME>"
            }
          ],
          "content": {
            "mimeType": "text/plain",
            "text": "Hello, World!",
            "size": -1
          },
          "redirectURL": "",
          "headersSize": -1,
          "bodySize": -1
        },
        "cache": {},
        "timings": {
          "connect": -1,
          "ssl": -1,
          "send": -1,
          "receive": -1,
          "wait": -1
        }
      }
    ]
  }
}

/traffics?curl

curl http://localhost:port/hello \
  -H 'accept: */*' \
  -H 'host: localhost:port'

curl http://localhost:port/hello/gzip \
  -H 'accept: */*' \
  -H 'host: localhost:port'

curl http://localhost:port/echo \
  -X POST \
  -H 'content-type: text/plain' \
  -H 'accept: */*' \
  -H 'host: localhost:port' \
  -d 'Hello, World!'
