tests/snapshots/web__subscribe_traffics.snap
---
source: tests/web.rs
expression: output
---
{"id":1,"method":"POST","uri":"http://localhost:<PORT>/echo","status":200,"size":13,"time":0,"mime":"text/plain"}
{"id":2,"method":"POST","uri":"http://localhost:<PORT>/echo","status":200,"size":13,"time":0,"mime":"text/plain"}
